# ParProg_7sem

./: .gitignore  CMakeLists.txt  README.md
intro/: circle.c  harmonic_sum.c  hello_world.c
lab01/: CMakeLists.txt  first.c
